--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.9.1",
     "babel-preset-stage-1": "^6.1.18",
     "bourbon-neat": "^1.7.4",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.0.4",
+    "redux-promise": "^0.5.3"
   }
 }
