--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "image-webpack-loader": "^1.8.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
@@ -29,13 +30,16 @@
     "axios": "^0.9.1",
     "babel-preset-stage-1": "^6.1.18",
     "bourbon-neat": "^1.7.4",
+    "file-loader": "^0.8.5",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-google-maps": "^4.7.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
     "redux-form": "^4.1.3",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "url-loader": "^0.5.7"
   }
 }
